--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,38 @@ html {
     /* background image credit: https://images5.alphacoders.com/489/489261.jpg */
     background-color: gray;
   //  background-size: 100% 125%;
+
+  #image-holder {
+
+    /* Positioning */
+     margin: 0 auto;
+
+    /* Box-model */
+    width: 400px;
+
+    /* Typography */
+    text-align: center;
+
+  }
+
+  #buttons {
+
+    /* Positioning */
+    margin: 50px 0;
+
+    /* Typography */
+    text-align: center;
+
+  }
+
+  button {
+
+    /* Box-model */
+    width: 200px;
+    height: 100px;
+
+  }
+
   }
 
 }
