--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,25 +22,47 @@ html {
   body {
     /* background image credit: https://images5.alphacoders.com/489/489261.jpg */
     background-color: gray;
+    height: 100%;
   //  background-size: 100% 125%;
-
-  #image-holder {
+  .trivia-square {
+    background-color: pink;
+    color: darkblue;
+    padding: 0% 5% 5% 5%;
+    margin: 8% 8% 7% 8%;
+    height: 600px;
+    //height: 80%;
+  }
+  .trivia-button {
+    background-color: blue;
+    color: white;
+    text-align: center;
+  }
+  #time-holder {
+    position: absolute;
+    margin-top: 100px;
+    top: 5%;
+  }
+  #question-holder {
 
     /* Positioning */
      margin: 0 auto;
 
     /* Box-model */
-    width: 400px;
+    width: 600px;
+    border: 2px 2px solid black;
 
     /* Typography */
     text-align: center;
 
   }
 
-  #buttons {
-
+  #start-control {
     /* Positioning */
-    margin: 50px 0;
+    position: absolute;
+    top: 45%;
+    left: 0%;
+    width: 100%; 
+  //  margin: 20px 0px;
 
     /* Typography */
     text-align: center;
@@ -50,8 +72,7 @@ html {
   button {
 
     /* Box-model */
-    width: 200px;
-    height: 100px;
+    text-align: center;
 
   }
 
