--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,8 +24,14 @@ html {
     background-color: gray;
     height: 100%;
   //  background-size: 100% 125%;
+  .custom-button {
+    display: block;
+    background: transparent;
+    width: 100%;
+  }
   .custom-button:hover {
     background-color: red;
+    cursor: pointer;
     /* Positioning */
     //margin: 0 auto;
 
