--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,12 +24,12 @@ html {
     background-color: gray;
     height: 100%;
   //  background-size: 100% 125%;
-  .custom-button {
+  .trivia-choice-button {
     display: block;
     background: transparent;
     width: 100%;
   }
-  .custom-button:hover {
+  .trivia-choice-button:hover {
     background-color: red;
     cursor: pointer;
 
