Added styling to css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,8 @@ html body {
   html body #score-board {
     font-family: "Acme", sans-serif;
     text-align: center;
-    font-size: 350%; }
+    line-height: 1.1;
+    font-size: 250% !important; }
   html body #image-holder {
     /* Positioning */
     position: absolute;
@@ -77,6 +78,8 @@ html body {
     width: 100%;
     /* Typography */
     text-align: center; }
+  html body #restart-btn:hover {
+    background-color: #5B5B59;
+    color: #CAE6F2; }
   html body button {
-    /* Box-model */
     text-align: center; }
